--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=navatarjar
 spring.datasource.url:jdbc:mysql://139.162.60.69:3306/navatar1
-spring.datasource.username:
-spring.datasource.password:
+spring.datasource.username:user1
+spring.datasource.password:Navatar2024!
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
